--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 
 <head>
-  <title>Crypter NFT</title>
+  <title>Viridian Exchange</title>
+
   <meta
     content="Epic NFT Marketplace UI Design Kit"
     name="description">
@@ -23,12 +24,12 @@
   <meta name="twitter:site" content="@ui8">
   <meta name="twitter:creator" content="@ui8">
   <meta property="fb:admins" content="132951670226590">
-  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+  <link rel="icon" href="%PUBLIC_URL%/logo.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/favicon-16x16.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/logo.svg">
+  <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/logo.svg">
   <link rel="manifest" href="%PUBLIC_URL%/site.webmanifest">
   <meta name="msapplication-TileColor" content="#da532c">
   <meta name="theme-color" content="#ffffff">
