--- a/public/index.html
+++ b/public/index.html
@@ -5,16 +5,16 @@
   <title>Viridian Exchange</title>
 
   <meta
-    content="Epic NFT Marketplace UI Design Kit"
+    content="The Premier Physically-Backed NFT Marketplace"
     name="description">
-  <meta content="Crypter - NFT Marketplace UI Kit" property="og:title">
+  <meta content="Viridian Exchange" property="og:title">
   <meta
-    content="Epic NFT Marketplace UI Design Kit"
+    content="The Premier Physically-Backed NFT Marketplace"
     property="og:description">
-  <meta content="%PUBLIC_URL%/fb-og-image.png" property="og:image">
+  <meta content="%PUBLIC_URL%/logo.svg" property="og:image">
   <meta property="og:url" content="https://ui8.net/ui8/products/crypter-nft-marketplace-ui-kit">
   <meta property="og:site_name" content="crypter-nft-marketplace-ui-kit">
-  <meta content="Crypter - NFT Marketplace UI Kit" property="twitter:title">
+  <meta content="Viridian Exchange" property="twitter:title">
   <meta
     content="Premium Web UI Kit for Fitness Experience"
     property="twitter:description">
