Fixed dark mode

--- a/public/index.html
+++ b/public/index.html
@@ -57,8 +57,8 @@
       var classNameLight = 'light-mode';
 
       function setClassOnDocumentBody(darkMode) {
-        document.body.classList.add(darkMode ? classNameDark : classNameLight);
-        document.body.classList.remove(darkMode ? classNameLight : classNameDark);
+        document.body.classList.add(darkMode ? classNameDark : classNameDark);
+        document.body.classList.remove(darkMode ? classNameLight : classNameLight);
       }
 
       var preferDarkQuery = '(prefers-color-scheme: dark)';
