Fixed dark mode second attempt

--- a/public/index.html
+++ b/public/index.html
@@ -58,7 +58,7 @@
 
       function setClassOnDocumentBody(darkMode) {
         document.body.classList.add(darkMode ? classNameDark : classNameDark);
-        document.body.classList.remove(darkMode ? classNameLight : classNameLight);
+        //document.body.classList.remove(darkMode ? classNameLight : classNameLight);
       }
 
       var preferDarkQuery = '(prefers-color-scheme: dark)';
