--- a/public/index.html
+++ b/public/index.html
@@ -57,35 +57,42 @@
       var classNameLight = 'light-mode';
 
       function setClassOnDocumentBody(darkMode) {
-        document.body.classList.add(darkMode ? classNameDark : classNameDark);
-        //document.body.classList.remove(darkMode ? classNameLight : classNameLight);
+        document.body.classList.add(classNameDark);
+        document.body.classList.remove(classNameLight);
       }
 
       var preferDarkQuery = '(prefers-color-scheme: dark)';
       var mql = window.matchMedia(preferDarkQuery);
       var supportsColorSchemeQuery = mql.media === preferDarkQuery;
-      var localStorageTheme = null;
+      var localStorageTheme = true;
       try {
-        localStorageTheme = localStorage.getItem(storageKey);
+        //localStorageTheme = localStorage.getItem(storageKey);
+        //alert(JSON.stringify(localStorageTheme))
       } catch (err) { }
-      var localStorageExists = localStorageTheme !== null;
-      if (localStorageExists) {
+      //var localStorageExists = localStorageTheme !== null;
+      //if (localStorageExists) {
         localStorageTheme = JSON.parse(localStorageTheme);
-      }
+      //}
+
+      var isDarkMode = true; //document.body.classList.contains(classNameDark);
+      localStorage.setItem(storageKey, JSON.stringify(isDarkMode));
+
+      setClassOnDocumentBody(localStorageTheme);
 
       // Determine the source of truth
-      if (localStorageExists) {
-        // source of truth from localStorage
-        setClassOnDocumentBody(localStorageTheme);
-      } else if (supportsColorSchemeQuery) {
-        // source of truth from system
-        setClassOnDocumentBody(mql.matches);
-        localStorage.setItem(storageKey, mql.matches);
-      } else {
-        // source of truth from document.body
-        var isDarkMode = document.body.classList.contains(classNameDark);
-        localStorage.setItem(storageKey, JSON.stringify(isDarkMode));
-      }
+      // if (localStorageExists) {
+      //   // source of truth from localStorage
+      //   setClassOnDocumentBody(localStorageTheme);
+      // } else if (supportsColorSchemeQuery) {
+      //   // source of truth from system
+      //   setClassOnDocumentBody(mql.matches);
+      //   localStorage.setItem(storageKey, JSON.stringify(isDarkMode));
+      // } else {
+      //   // source of truth from document.body
+      //   setClassOnDocumentBody(mql.matches);
+      //   var isDarkMode = document.body.classList.contains(classNameDark);
+      //   localStorage.setItem(storageKey, JSON.stringify(isDarkMode));
+      // }
     })();
   </script>
   <div id="root"></div>
