--- a/public/index.html
+++ b/public/index.html
@@ -5,18 +5,17 @@
   <title>Viridian Exchange</title>
 
   <meta
-    content="The Premier Physically-Backed NFT Marketplace"
+    content="Bringing Physical Collectibles to the Digital World"
     name="description">
   <meta content="Viridian Exchange" property="og:title">
   <meta
-    content="The Premier Physically-Backed NFT Marketplace"
+    content="Bringing Physical Collectibles to the Digital World"
     property="og:description">
   <meta content="%PUBLIC_URL%/logo.svg" property="og:image">
-  <meta property="og:url" content="https://ui8.net/ui8/products/crypter-nft-marketplace-ui-kit">
-  <meta property="og:site_name" content="crypter-nft-marketplace-ui-kit">
+  <meta property="og:site_name" content="Viridian Exchange">
   <meta content="Viridian Exchange" property="twitter:title">
   <meta
-    content="Premium Web UI Kit for Fitness Experience"
+    content="Bringing Physical Collectibles to the Digital World via NFTs"
     property="twitter:description">
   <meta content="%PUBLIC_URL%/twitter-card.png" property="twitter:image">
   <meta property="og:type" content="website">
@@ -27,7 +26,7 @@
   <link rel="icon" href="%PUBLIC_URL%/logo.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/apple-touch-icon.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/logo.svg">
   <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/logo.svg">
   <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/logo.svg">
   <link rel="manifest" href="%PUBLIC_URL%/site.webmanifest">
