fixed metadata + images

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     name="description">
   <meta content="Viridian Exchange" property="og:title">
   <meta
-    content="Bringing Physical Collectibles to the Digital World"
+    content="Bringing Physical Collectibles to the Digital World via NFTs"
     property="og:description">
   <meta content="%PUBLIC_URL%/logo.svg" property="og:image">
   <meta property="og:site_name" content="Viridian Exchange">
