Got gasless approvals working

--- a/public/transactions - Eth, how to call a deposit function from a smart contract - Stack Overflow.html
+++ b/public/transactions - Eth, how to call a deposit function from a smart contract - Stack Overflow.html
@@ -98,6 +98,7 @@
                     <div class="left-sidebar js-unpinned-left-sidebar" data-can-be="left-sidebar" data-is-here-when="sm"></div>
                 </div>
                     <a href="https://stackoverflow.com" class="-logo js-gps-track"
+                       target="_blank" rel="noopener noreferrer"
                         data-gps-track="top_nav.click({is_current:false, location:2, destination:8})">
                         <span class="-img _glyph">Stack Overflow</span>
                     </a>
@@ -148,7 +149,8 @@
                     </li>
                     <li class="m6">
                         <a href="/jobs?so_source=ProductsMenu&so_medium=StackOverflow" class="bar-sm p6 d-block h:bg-black-100 js-gps-track"
-                            data-gps-track="top_nav.products.click({location:2, destination:9})"
+                           target="_blank" rel="noopener noreferrer"
+                           data-gps-track="top_nav.products.click({location:2, destination:9})"
                             data-ga="[&quot;top navigation&quot;,&quot;jobs submenu click&quot;,null,null,null]">
                             <span class="fs-body1 d-block">Jobs</span>
                             <span class="fs-caption d-block fc-light">Programming &amp; related technical career opportunities</span>
