Somehow fixed the z issue

--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,9 @@
 <head>
   <title>Viridian Exchange</title>
 
+  <style>
+    .w3a-modal {z-index: 10 !important;}
+  </style>
   <meta
     content="Bringing Physical Collectibles to the Digital World"
     name="description">
